# sahabot2

./: .coveragerc  .dockerignore  .env.example  .env.migration  .env.test  .gitignore  API_GAP_ANALYSIS.md  API_SWAGGER_GUIDE.md  ASYNC_QUALIFIER_RENAME_PLAN.md  ASYNC_VOD_SUBMISSION_TESTING.md  AUDIT_LOG_IMPLEMENTATION.md  AUTHORIZATION_MIGRATION_COMPLETE.md  AVIANART_IMPLEMENTATION.md  BOILERPLATE_REDUCTION_SUMMARY.md  COMPONENTS_GUIDE.md  DISCORD_NOTIFICATION_HANDLERS.md  DOCUMENTATION_UPDATES_COMPLETE.md  DOMAIN_SEPARATION_SUMMARY.md  DYNAMIC_CONTENT_REMOVAL_COMPLETE.md  Dockerfile  EVENT_LISTENERS_REFACTOR_COMPLETE.md  GITHUB_AGENT_TESTING.md  IMPLEMENTATION_SUMMARY.md  JAVASCRIPT_REFACTORING_SUMMARY.md  LOGS_IMPLEMENTATION_SUMMARY.md  MATCH_HANDLER_TESTING.md  MIGRATION_NOTES.md  MIGRATION_SUMMARY.md  MIGRATION_VISUAL_SUMMARY.md  MYSTERY_IMPLEMENTATION_SUMMARY.md  NICEGUI_TO_JS_MIGRATION_ESTIMATE.md  NOTIFICATION_HANDLER_REFACTORING.md  NOTIFICATION_SYSTEM_COMPLETE.md  POC_MIGRATION_PLAN.md  PRESET_SELECTION_NEXT_STEPS.md  QUICKSTART_TESTING.md  RACETIME_BOT_IMPLEMENTATION_SUMMARY.md  RACETIME_REQUIREMENT_IMPLEMENTATION.md  RACE_REATTEMPT_IMPLEMENTATION.md  README.md  (+22 more)
.github/: copilot-instructions.md
api/: __init__.py  auto_register.py  deps.py  schema_utils.py  utils.py
bot/: __init__.py  client.py
components/: __init__.py  badge.py  base_page.py  card.py  data_table.py  datetime_label.py  dynamic_form_builder.py  empty_state.py  footer.py  header.py  motd_banner.py  sidebar copy.py  sidebar.py  stat_card.py  user_menu.py
discordbot/: __init__.py  client.py  (+2 more)
(+1098 files in other folders)
