[tool.poetry]
name = "sahabot2"
version = "0.1.0"
description = "SahasrahBot2 - A NiceGUI + Tortoise ORM web application with Discord OAuth2 authentication and bot integration"
authors = ["Thomas Prescott <tcprescott@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
nicegui = "^3.2.0"
tortoise-orm = "^0.25.0"
aerich = "^0.9.2"
python-dotenv = "^1.0.0"
httpx = "^0.26.0"
pydantic = "^2.12.0"
pydantic-settings = "^2.11.0"
"discord.py" = "^2.0.0"
racetime-bot = "^2.1.0"
aiomysql = "^0.3.2"
cryptography = "^46.0.3"
croniter = "^2.0.0"
beautifulsoup4 = "^4.12.0"
python-slugify = "^8.0.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
black = "^24.0.0"
ruff = "^0.1.0"

[tool.aerich]
tortoise_orm = "migrations.tortoise_config.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."

[tool.pylint.messages_control]
disable = [
    "W0718",  # broad-exception-caught
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
